--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body{
 .part1{
     display: flex;
     flex-direction: column;
-    background-color: azure;
+    /* background-color: azure; */
 }
 .clock{
     position: absolute;
@@ -54,9 +54,6 @@ body{
     width: 517px;
     height: 335px;
     opacity: 1;
-    /* box-shadow: #6950bc  9px 11px 27px; */
-    
-    box-shadow: #6950bc 11px 11px 13px;
 
 }
 @media (max-width: 450px){
@@ -73,39 +70,41 @@ body{
     }
 }
 #message{
-        position: absolute;
-        top: 502px;
-        left: 124px;
-        width: 566px;
-        height: 77px;
-    border: 1px solid;
-   
-    border: 1px solid #EDEDED;
+ text-align: center;
+    font-size: x-large;
+    font-weight: bolder; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+.message1{
+    position: relative;
+    top: 21.2em;
+    left: 135px;
+    width: 529px;
+    height: 77px;
+    border: 1px solid black;
+    background-color: #801df1;
+    /* border: 1px solid #EDEDED; */
     border-radius: 10px;
     opacity: 1;
     text-align: center;
     font-size: x-large;
-    font-weight: bolder;
-    
-    box-shadow: #6950bc 11px 11px 13px;
-    
-    color: rgb(245, 238, 238);
+
 }
 @media (max-width: 450px){
-    #message{
+    .message1{
         position: absolute;
-        top: 613px;
+        top: 627px;
         left: 5px;
         width: 100%;
         height: 77px;
         border: 1px solid;
-        background: #FFFFFF;
-        border: 1px solid #EDEDED;
+        background: #f25cfe;
+        border: 1px solid #6e54ec;
         border-radius: 10px;
         opacity: 1;
         text-align: center;
         font-size: x-large;
-        color: black;
+        color: #3d087b;
     }  
 }
 .set{
@@ -191,8 +190,14 @@ background: transparent linear-gradient(280deg, #6E54EC 0%, #CB52F8 40%, #FC5EFF
         background-color: #F25CFE;}
     }
     #message2{
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: #3D087B;
+        font-size: 27px;
+    }
+     .message2{
         position: absolute;
-        top: 173px;
+        top: 204px;
         left: 706px;
         width: 536px;
         height: 118px;
@@ -205,11 +210,11 @@ background: transparent linear-gradient(280deg, #6E54EC 0%, #CB52F8 40%, #FC5EFF
         font-size: 30px;
     }
     @media (max-width: 450px){
-        #message2{
+        .message2{
             position: absolute;
-            top: 951px;
+            top: 971px;
             left: 1%;
-            rigth: 1%;
+            right: 1%;
             width: 100%;
            
             border-radius: 8px 8px 0 0;
@@ -221,7 +226,8 @@ background: transparent linear-gradient(280deg, #6E54EC 0%, #CB52F8 40%, #FC5EFF
         }
     }
   #img{
-        background-image: url(./GM.jpg);
+      
+        background-image: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/spring-quotes-1581440427.jpg?crop=1.00xw:0.752xh;0,0.207xh&resize=980:*);
   background-size: cover;
         position: absolute;
         top: 321px;
@@ -715,3 +721,11 @@ text-align: center;
         font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-size: 15px;
     }
+
+
+
+
+
+
+
+
